--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,6 @@
   "dependencies": {
     "angular": ">=1.2.*",
     "angular-bootstrap": "~0.11.0",
-    "angular-chart.js": "~0.8.5",
     "angular-cookies": ">=1.2.*",
     "angular-resource": ">=1.2.*",
     "angular-route": ">=1.2.*",
@@ -12,6 +11,8 @@
     "bootstrap": "~3.1.1",
     "es5-shim": "~3.0.1",
     "font-awesome": ">=4.1.0",
+    "highcharts": "~4.1.9",
+    "highcharts-ng": "~0.0.11",
     "json3": "~3.3.1",
     "lodash": "~2.4.1"
   },
